<resources>
    <string name="app_name">RemitexApp</string>
    <string name="title_activity_containererfassung">ContainerErfassungActivity</string>
    <string name="title_activity_export">ExportActivity</string>
    <string name="tagSpinner_prompt">Datum filtern:</string>
    <string name="fahrernummerSpinner_prompt">Fahrernummer filtern:</string>
    <string name="ToolbarTitle">Container App</string>
    <string name="ToolbarLogo">Remitex-Logo</string>
    <string name="ExportTitle">Daten Transfer</string>
    <string name="ExportButtonExport">Export und Senden</string>
    <string name="ExportButtonReExport">Re-Export</string>
    <string name="ExportBackButton">Zurück</string>
    <string name="FahrernummerTitle">Fahrer anmelden</string>
    <string name="fahrernummerhint">Fahrernummer</string>
    <string name="fahrernummeranmeldenbutton">Anmelden</string>
    <string name="fahrernummerdatentransferbutton">Daten Transfer</string>
    <string name="erfassungfuellmengen_erfassen">Füllmengen erfassen</string>
    <string name="erfassencontainernummerhint">Containernr.</string>
    <string name="erfassenbarcode_scannenbutton">1. Barcode scannen</string>
    <string name="erfassenabbrechenbutton">Abbrechen</string>
    <string name="erfassenfuellmenge_in_prozenthint">Füllmenge %</string>
    <string name="erfassenerfassenbutton">3. Speichern</string>
    <string name="erfassenerfassung_beendenbutton">Beenden</string>
    <string name="erfassenlichtbutton">Licht</string>
    <string name="title_activity_re_export">ReExportActivity</string>
    <string name="ReExportTitle">Daten erneut exportieren</string>
    <string name="reexportexportbutton">Export und Senden</string>
    <string name="foto_machen">2. Foto machen (optional)</string>
</resources>