<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReExportActivity">

    <FrameLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="?attr/colorPrimary"
            android:elevation="4dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:src="@drawable/remitexlogo"
                android:layout_gravity="end"
                android:contentDescription="@string/ToolbarLogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ToolbarTitle"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:layout_marginStart="18dp"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.Toolbar>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_container"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ReExportTitle"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"/>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:choiceMode="multipleChoice" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/buttonExportAndSend"
            style="@android:style/Widget.DeviceDefault.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/reexportexportbutton" />

        <Button
            android:id="@+id/buttonReExportZurueck"
            style="@android:style/Widget.DeviceDefault.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/ExportBackButton" />

    </LinearLayout>

    <TextView
        android:id="@+id/toolbar_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone" />

</RelativeLayout>
