<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="?attr/colorPrimary"
            android:elevation="4dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:src="@drawable/remitexlogo"
                android:layout_gravity="end"
                android:contentDescription="@string/ToolbarLogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ToolbarTitle"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:layout_marginStart="18dp"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.Toolbar>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_container"
        android:layout_above="@+id/buttonAbmelden"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erfassungfuellmengen_erfassen"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editTextContainernummer"
                android:layout_width="140dp"
                android:layout_height="58dp"
                android:hint="@string/erfassencontainernummerhint"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:autofillHints="" />

            <Button
                android:id="@+id/scanBarcodeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/erfassenbarcode_scannenbutton"
                android:textSize="16sp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/lightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erfassenlichtbutton"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            tools:ignore="ButtonStyle" />

        <com.journeyapps.barcodescanner.BarcodeView
            android:id="@+id/barcode_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/editTextFuellmenge"
            android:layout_width="140dp"
            android:layout_height="58dp"
            android:hint="@string/erfassenfuellmenge_in_prozenthint"
            android:importantForAutofill="no"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColor="@color/blue"
            android:gravity="center_vertical"
            android:maxLength="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="0"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="5"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/button10"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="10"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/button15"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="15"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button25"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="25"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/button35"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="35"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/button50"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="50"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/button65"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="65"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button75"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="75"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/button90"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="90"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/button100"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="100"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/button110"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="110"
                android:textSize="20sp"
                tools:ignore="ButtonStyle,HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/buttonFotoMachen"
                style="@android:style/Widget.DeviceDefault.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="3"
                android:backgroundTint="@color/blue"
                android:text="@string/foto_machen"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:padding="15dp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeStepGranularity="1sp"/>

            <TextView
                android:id="@+id/fotoCounter"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="top|end"
                android:background="@drawable/circle_background"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginStart="-15dp"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/buttonErfassen"
                style="@android:style/Widget.DeviceDefault.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="5"
                android:backgroundTint="@color/blue"
                android:text="@string/erfassenerfassenbutton"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:padding="20dp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeStepGranularity="1sp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonAbmelden"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/erfassenerfassung_beendenbutton"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/toolbar_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone" />

</RelativeLayout>
